<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lineSpacingExtra="18sp"
        android:text="@string/tituloRecyclerView"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_user_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lineSpacingExtra="18sp"
        android:text="@string/authorRecyclerView"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_user_phonetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/statusRecyclerView"
        android:textSize="16sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>