<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Profile">

        <TextView
            android:id="@+id/profileTitle_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/textProfileTitle"
            android:textColor="#8CC2C9"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/PwdProfile_editText"
            android:layout_width="334dp"
            android:layout_height="45dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/editTextPwdProfile"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailRegister_editText" />

        <TextView
            android:id="@+id/EmailRegister_editText"
            android:layout_width="336dp"
            android:layout_height="42dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/e_mail_edit_text"
            android:importantForAutofill="no"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336" />

        <TextView
            android:id="@+id/EmailRegister2_editText"
            android:layout_width="331dp"
            android:layout_height="27dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:importantForAutofill="no"
            android:text="@string/userEmailRegistered"
            android:textColor="#020202"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.282" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="136dp"
            android:layout_height="68dp"
            android:layout_marginBottom="228dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/delete_profile_button"
            android:textStyle="bold"
            app:backgroundTint="#0C6980"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="140dp"
            android:layout_height="69dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/resetPwd"
            android:textStyle="bold"
            app:backgroundTint="#0C6980"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_button" />

        <Button
            android:id="@+id/logOut_button"
            android:layout_width="136dp"
            android:layout_height="62dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/logoutButton"
            android:textStyle="bold"
            app:backgroundTint="#0C6980"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_button"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>