<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddBook">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddBookInfo">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="297dp"
            android:layout_height="46dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBookAuthor" />

        <EditText
            android:id="@+id/editTextBookAuthor"
            android:layout_width="301dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/editTextAuthor"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.756"
            app:layout_constraintStart_toEndOf="@+id/addressItem"
            app:layout_constraintTop_toBottomOf="@+id/editTextBookTitle" />

        <Button
            android:id="@+id/buttonSaveItem"
            android:layout_width="114dp"
            android:layout_height="53dp"
            android:layout_marginTop="79dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/poppins_light"
            android:onClick="buttonSaveItemOnClick"
            android:text="@string/saveButton"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:backgroundTint="#0C6980"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/typeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/statusTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#050505"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressItem" />

        <EditText
            android:id="@+id/editTextBookTitle"
            android:layout_width="307dp"
            android:layout_height="44dp"
            android:layout_marginTop="188dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/editTextTitle2"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.853"
            app:layout_constraintStart_toEndOf="@+id/nameItem"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addressItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/authorTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameItem" />

        <TextView
            android:id="@+id/nameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="196dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/editTextTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>